Finished with design and made html code

--- a/index.html
+++ b/index.html
@@ -2,11 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ToDo List App</title>
+    <title>ToDoList App</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <header class="header">
+        <div class="logo">
+            <img src="sources/logo.png" alt="Logo">
+        </div>
+        <div class="app-title">
+            ToDoList
+        </div>
+        <div class="header-buttons">
+            <button class="sign-up-button">Sign up</button>
+            <button class="login-button">Login</button>
+        </div>
+    </header>
+    <main class="main">
+        <div class="background">
+            <img src="sources/paper_sheets.png" alt="Background">
+        </div>
+        <div class="main-text">
+            <p class="first-slogan">Emblem of Productivity</p>
+            <p class="main-description">Your new starting point in time management and goal achievement! Our application is an intelligent companion designed to turn your ideas into actions. From creating task lists to managing priorities, we offer tools that will help you not only manage time but also enhance your productivity.</p>
+            <p class="second-slogan">Your Tasks, Your Way</p>
+            <p class="invite-message">Join us and achieve more!</p>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="contacts-title">Contact me</div>
+        <div class="email">
+            <img src="sources/mail_icon.png" alt="Email">
+            <p class="email-text"><a class="email-link" href="mailto:seku345@yandex.ru">seku345@yandex.ru</a></p>
+        </div>
+        <div class="telegram">
+            <p class="telegram-text"><a class="telegram-link" href="https://t.me/seku345">https://t.me/seku345</a></p>
+        </div>
+        <div class="twitter">
+            <p class="twitter-text"><a class="twitter_link" href="https://twitter.com/sekuosly">https://twitter.com/sekuosly</a></p>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
