Finally finished with the main window!

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <title>ToDoList App</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <div class="background-container">
+        <nav></nav>
+        <img class="background" src="sources/paper_sheets.png" alt="Background">
+    </div>
     <header class="header">
         <div class="logo">
-            <img src="sources/logo.png" alt="Logo">
+            <img class="logo-img" src="sources/logo.png" alt="Logo">
         </div>
         <div class="app-title">
-            ToDoList
+            <p class="title-text">ToDoList</p>
         </div>
         <div class="header-buttons">
             <button class="sign-up-button">Sign up</button>
@@ -19,9 +24,6 @@
         </div>
     </header>
     <main class="main">
-        <div class="background">
-            <img src="sources/paper_sheets.png" alt="Background">
-        </div>
         <div class="main-text">
             <p class="first-slogan">Emblem of Productivity</p>
             <p class="main-description">Your new starting point in time management and goal achievement! Our application is an intelligent companion designed to turn your ideas into actions. From creating task lists to managing priorities, we offer tools that will help you not only manage time but also enhance your productivity.</p>
@@ -30,17 +32,23 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="contacts-title">Contact me</div>
+        <footer class="footer">
+    <div class="contacts-title">Contact me</div>
+    <div class="links">
         <div class="email">
-            <img src="sources/mail_icon.png" alt="Email">
-            <p class="email-text"><a class="email-link" href="mailto:seku345@yandex.ru">seku345@yandex.ru</a></p>
+            <img class="link-logo" src="sources/mail_icon.png" alt="Email">
+            <p class="email-text"><a class="email-link" href="mailto:seku345@yan    dex.ru" target="_blank">seku345@yandex.ru</a></p>
         </div>
         <div class="telegram">
-            <p class="telegram-text"><a class="telegram-link" href="https://t.me/seku345">https://t.me/seku345</a></p>
+            <img class="link-logo" src="sources/telegram_icon.png" alt="Telegram">
+            <p class="telegram-text"><a class="telegram-link" href="https://t.me/seku345" target="_blank">https://t.me/seku345</a></p>
         </div>
         <div class="twitter">
-            <p class="twitter-text"><a class="twitter_link" href="https://twitter.com/sekuosly">https://twitter.com/sekuosly</a></p>
+            <img class="link-logo" src="sources/twitter_icon.png" alt="Twitter">
+            <p class="twitter-text"><a class="twitter_link" href="https://twitter.com/sekuosly" target="_blank">https://twitter.com/sekuosly</a></p>
         </div>
+    </div>
+</footer>
     </footer>
     <script src="script.js"></script>
 </body>
