--- a/index.html
+++ b/index.html
@@ -26,17 +26,20 @@
     </header>
     <main class="main">
         <div class="user-info-container" id="user-info">
-            <div>
-                <p>Your Profile</p>
+            <div class="info-header">
+                <p class="info-header-p">Your Profile</p>
             </div>
-            <div>
-                <p>Username: <span id="username_place"></span></p>
+            <div class="info-line">
+                <img class="info-icon" src="sources/profile_icon.png" alt="Profile: ">
+                <p class="hp"><span id="username_place"></span></p>
             </div>
-            <div>
-                <p>Password: <span id="password_place"></span></p>
+            <div class="info-line">
+                <img class="info-icon" src="sources/password_icon.png" alt="Password: ">
+                <p class="hp"><span id="password_place"></span></p>
             </div>
-            <div>
-                <p>Email: <span id="email_place"></span></p>
+            <div class="info-line">
+                <img class="info-icon" src="sources/mail_icon.png" alt="Email: ">
+                <p class="hp"><span id="email_place"></span></p>
             </div>
         </div>
         <div class="main-text" id="main-text">
