task info buttons

--- a/index.html
+++ b/index.html
@@ -143,6 +143,15 @@
                 </div>
             </div>
             <div class="task-info-container" id="task-info">
+                <div class="task-info-buttons-container">
+                    <button class="task-info-buttons" id="status-button">
+                        <input type="radio" id="status-button-radio">
+                        <label for="status-button-radio" id="status-button-radio-label"></label>
+                    </button>
+                    <button class="task-info-buttons" id="more-button"><img src="sources/ellipsis.png" alt="all-desc"></button>
+                    <button class="task-info-buttons" id="edit-button"><img src="sources/edit.png" alt="edit"></button>
+                    <button class="task-info-buttons" id="delete-button"><img src="sources/trash-bin.png" alt="delete"></button>
+                </div>
                 <div class="task-info-header">
                     <p class="info-header-p">Task Info</p>
                 </div>
