--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="left-side">
                             <div class="input-container">
                                 <label for="task_name"></label>
-                                <input class="input" type="text" id="task_name" name="task_name" placeholder="Task Title" required>
+                                <input class="input" type="text" id="task_name" name="task_name" placeholder="Task Title" maxlength="32" required>
                             </div>
                             <div class="input-container">
                                 <label for="task_time"></label>
@@ -162,9 +162,11 @@
                     <p class="hp"><span id="task_description_place"></span></p>
                 </div>
                 <div class="task-date">
+                    <img src="sources/date.png" alt="Date">
                     <p class="hp"><span id="task_date_place"></span></p>
                 </div>
                 <div class="task-time">
+                    <img src="sources/time.png" alt="Time">
                     <p class="hp"><span id="task_time_place"></span></p>
                 </div>
             </div>
