more desc button & better title, desc & new real tasks

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="left-side">
                             <div class="input-container">
                                 <label for="task_name"></label>
-                                <input class="input" type="text" id="task_name" name="task_name" placeholder="Task Title" maxlength="32" required>
+                                <input class="input" type="text" id="task_name" name="task_name" placeholder="Task Title" maxlength="28" required>
                             </div>
                             <div class="input-container">
                                 <label for="task_time"></label>
@@ -155,17 +155,17 @@
                 <div class="task-info-header">
                     <p class="info-header-p">Task Info</p>
                 </div>
-                <div class="task-name">
+                <div class="task-name" id="task-info-title">
                     <p class="hp"><span id="task_name_place"></span></p>
                 </div>
-                <div class="task-description">
+                <div class="task-description" id="task-info-description">
                     <p class="hp"><span id="task_description_place"></span></p>
                 </div>
-                <div class="task-date">
+                <div class="task-date" id="task-info-date">
                     <img src="sources/date.png" alt="Date">
                     <p class="hp"><span id="task_date_place"></span></p>
                 </div>
-                <div class="task-time">
+                <div class="task-time" id="task-info-time">
                     <img src="sources/time.png" alt="Time">
                     <p class="hp"><span id="task_time_place"></span></p>
                 </div>
